Recommendation Generation Module completed